@@ -8,6 +8,7 @@ Revision history for Database-Abstraction
 	Added the _fatal method
 	selectall_hashref name is misleading, will be selectall_arrayref
 	selectall_hash name is misleading, will be selectall_array
+	Fix potential memory leak issues
 
 0.29	Mon Aug 18 21:42:25 EDT 2025
 	Moved the test data from data to t/data
